--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
-        <div class="carousel-item active">
+        <div class="carousel-item active text-center">
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
             <h2>Welcome to Agency<br></h2>
